--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>首页/title>
 </head>
 <body>
-
+<h4>这是第一个模板页面</h4>
 </body>
 </html>
